[package]
name = "enstream"
version = "0.2.1"
edition = "2021"
authors = ["Ivan Leshchenko <ivan@ivan770.me>"]
license = "MIT OR Apache-2.0"
description = "Conversion from Future to Stream"
repository = "https://github.com/ivan770/enstream"

[dependencies]
futures-core = { version = "0.3.21", default-features = false }
pin-project = "1.0.10"
pinned-aliasable = "0.1.3"

[dev-dependencies]
futures-util = "0.3.21"
